# google_adk_chatbot

./: .gitignore  AGENTS.md  ARCHITECTURE_IMPLEMENTATION_GUIDE.md  CLAUDE.md  LICENSE  README.md  console_response.txt  prompt_commands.txt  pyproject.toml  pytest.ini  requirements.txt
.agent/skills/openevolve-experiment/: SKILL.md
.agent/skills/skill-creator/: SKILL.md
artifacts/8317d49c-7864-4a4d-b375-886b8419d3f7/: error_details
artifacts/bdb84e23-7c38-4b43-8eb2-6e86eb3c133e/: error_details
chatbot/ADK_assistant/: agent.py  logging_setup.py  rag_test_queries.json
chatbot/ADK_assistant/.adk/: session.db
chatbot/ADK_assistant/agents/: coordinator.py  project_builder.py  rag_qa.py
chatbot/ADK_assistant/callbacks/: guardrails.py  tool_gates.py
chatbot/ADK_assistant/config/: settings.py
chatbot/ADK_assistant/openevolve_experiments/: config.yaml  debug_evaluator.py  evaluator.py  initial_program.py  initial_program_0.py  inspect_adk.py  inspect_adk_root.py  inspect_event.py  inspect_genai_event.py  inspect_runner.py  inspect_session.py  (+5 more)
chatbot/ADK_assistant_backup/: agent.py  logging_setup.py
rag/: __init__.py  run_adk_ingest.py  run_adk_mcp_server.py
rag/adk_rag/: __init__.py  chunking.py  config.py  config.yaml  ingest.py  query.py  utils.py
rag/docs/: RAG for Code Documentation.md  adk_rag_config_report.md  adk_rag_mcp.md  llm_prompt_construction.md
scripts/: run_adk_dev.bat  run_adk_dev.ps1  run_adk_dev.sh
tests/: adk_code_queries.json  conftest.py  test_chunking.py  test_code_checker.py  test_code_extractor.py  test_config.py  test_query.py
(+919 files in other folders)
